// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scoping > should scope for @keyframes 1`] = `
"import { useSolidStyled as useSolidStyled_1 } from "solid-styled";
import { css } from 'solid-styled';
const sheet_1 = "c-f0b3b6fa-0";
const css_1 = "h1[s\\\\:c-f0b3b6fa-0]{animation-name:c-f0b3b6fa-0-spin}h2[s\\\\:c-f0b3b6fa-0]{animation:1s c-f0b3b6fa-0-spin}@keyframes c-f0b3b6fa-0-spin{0%{transform:rotate(0)}to{transform:rotate(360deg)}}";
export default function Example() {
  useSolidStyled_1(sheet_1, 1, css_1);
  return <h1 s:c-f0b3b6fa-0>Hello World</h1>;
}"
`;

exports[`scoping > should scope for attribute selectors 1`] = `
"import { useSolidStyled as useSolidStyled_1 } from "solid-styled";
import { css } from 'solid-styled';
const sheet_1 = "c-f0b3b6fa-0";
const css_1 = "[id][s\\\\:c-f0b3b6fa-0]{color:red}";
export default function Example() {
  useSolidStyled_1(sheet_1, 1, css_1);
  return <h1 id="example" s:c-f0b3b6fa-0>Hello World</h1>;
}"
`;

exports[`scoping > should scope for class selectors 1`] = `
"import { useSolidStyled as useSolidStyled_1 } from "solid-styled";
import { css } from 'solid-styled';
const sheet_1 = "c-f0b3b6fa-0";
const css_1 = ".example[s\\\\:c-f0b3b6fa-0]{color:red}";
export default function Example() {
  useSolidStyled_1(sheet_1, 1, css_1);
  return <h1 class="example" s:c-f0b3b6fa-0>Hello World</h1>;
}"
`;

exports[`scoping > should scope for id selectors 1`] = `
"import { useSolidStyled as useSolidStyled_1 } from "solid-styled";
import { css } from 'solid-styled';
const sheet_1 = "c-f0b3b6fa-0";
const css_1 = "#example[s\\\\:c-f0b3b6fa-0]{color:red}";
export default function Example() {
  useSolidStyled_1(sheet_1, 1, css_1);
  return <h1 id="example" s:c-f0b3b6fa-0>Hello World</h1>;
}"
`;

exports[`scoping > should scope for type selectors 1`] = `
"import { useSolidStyled as useSolidStyled_1 } from "solid-styled";
import { css } from 'solid-styled';
const sheet_1 = "c-f0b3b6fa-0";
const css_1 = "h1[s\\\\:c-f0b3b6fa-0]{color:red}";
export default function Example() {
  useSolidStyled_1(sheet_1, 1, css_1);
  return <h1 s:c-f0b3b6fa-0>Hello World</h1>;
}"
`;

exports[`scoping > should scope for universal selectors 1`] = `
"import { useSolidStyled as useSolidStyled_1 } from "solid-styled";
import { css } from 'solid-styled';
const sheet_1 = "c-f0b3b6fa-0";
const css_1 = "[s\\\\:c-f0b3b6fa-0]{color:red}";
export default function Example() {
  useSolidStyled_1(sheet_1, 1, css_1);
  return <h1 s:c-f0b3b6fa-0>Hello World</h1>;
}"
`;
